desenvolvimento left-sidebar

--- a/index.html
+++ b/index.html
@@ -33,5 +33,36 @@
             </div>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="left-sidebar">
+            <div class="sidebar">
+                <div class="sidebar-profile-box">
+                    <img src="./src/img/image-background-profile.png" width="100%" alt="imagem de fundo do perfil">
+                    <div class="sidebar-profile-info">
+                        <img src="./src/img/profile.jpg" alt="foto de perfil">
+                        <h1>Raphael Laurentino da Silva</h1>
+                        <h3>Web Developer</h3>
+                        <ul>
+                            <li>Repositories <span>64</span></li>
+                            <li>Commits <span>256</span></li>
+                            <li>Idade <span>31</span></li>
+                        </ul>
+                    </div>
+                    <div class="sidebar-profile-link">
+                        <a href="#"><img src="./src/img/items.png" alt="">My Items</a>
+                        <a href="#"><img src="./src/img/premium.png" alt="">Try Premium</a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        <div class="main-sidebar">
+
+        </div>
+        <div class="right-sidebar">
+
+        </div>
+    </div>
 </body>
 </html>
