--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" dir="ltr"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+    <meta name="description" content="Raphael Laurentino"/>
     <title>Raphael Laurentino</title>
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
@@ -54,7 +56,7 @@
                         <a href="#"><img src="./src/img/premium.png" alt="">Try Premium</a>
                     </div>
                 </div>
-                
+
             </div>
         </div>
         <div class="main-sidebar">
