iniciando a sidebar right

--- a/index.html
+++ b/index.html
@@ -57,13 +57,37 @@
                     </div>
                 </div>
 
+                <div class="sidebar-activity">
+                    <h3>RECENTE</h3>
+                    <a href="#"><img src="./src/img/recent.png" alt="recentes"> Web Development</a>
+                    <a href="#"><img src="./src/img/recent.png" alt="recentes"> User Interface</a>
+                    <a href="#"><img src="./src/img/recent.png" alt="recentes"> Online Learning</a>
+                    <a href="#"><img src="./src/img/recent.png" alt="recentes"> Learn Online</a>
+                    <a href="#"><img src="./src/img/recent.png" alt="recentes"> Code Better</a>
+                    <a href="#"><img src="./src/img/recent.png" alt="recentes"> Group Learning</a>
+                    <h3>GROUP</h3>
+                    <a href="#"><img src="./src/img/group.png" alt="recentes"> Web Design Group</a>
+                    <a href="#"><img src="./src/img/group.png" alt="recentes"> HTML & CSS Learners</a>
+                    <a href="#"><img src="./src/img/group.png" alt="recentes"> Python & JavaScript Group</a>
+                    <a href="#"><img src="./src/img/group.png" alt="recentes"> Learn Coding Online</a>
+                    <h3>HASHTAG</h3>
+                    <a href="#"><img src="./src/img/hashtag.png" alt="recentes"> webdevelopment</a>
+                    <a href="#"><img src="./src/img/hashtag.png" alt="recentes"> userinterface</a>
+                    <a href="#"><img src="./src/img/hashtag.png" alt="recentes"> onlinelearning</a>
+                    <div class="discover-more-link">
+                        <a href="#">Discover more</a>
+                    </div>
+                </div>
+
             </div>
         </div>
         <div class="main-sidebar">
 
         </div>
         <div class="right-sidebar">
-
+            <div class="sidebar-news">
+                
+            </div>
         </div>
     </div>
 </body>
