iniciando o main-content

--- a/index.html
+++ b/index.html
@@ -78,15 +78,64 @@
                         <a href="#">Discover more</a>
                     </div>
                 </div>
-
             </div>
         </div>
-        <div class="main-sidebar">
 
+        <div class="main-content">
+            <div class="create-post">
+                <div class="create-post-input">
+                    <img src="./src/img/profile.jpg" alt="">
+                    <textarea rows="2" placeholder="Write a post"></textarea>
+                </div>
+            </div>
         </div>
+
         <div class="right-sidebar">
             <div class="sidebar-news">
-                
+                <img src="./src/img/more.png" alt="" class="info-ico">
+                <h3>Trending News</h3>
+                <a href="#">High demand for skilled manpower</a>
+                <span>1d ago &niddot; 10,934 readers</span>
+
+                <a href="#">Careers growing horizontally</a>
+                <span>19h ago &niddot; 1,552 readers</span>
+
+                <a href="#">Less work visa for US, more for UK</a>
+                <span>1d ago &niddot; 27,290 readers</span>
+
+                <a href="#">More hiring = higher confidence</a>
+                <span>18h ago &niddot; 8,208 readers</span>
+
+                <a href="#">Gautam Adani is the world's third richest</a>
+                <span>12h ago &niddot; 4,205 readers</span>
+
+                <a href="#" class="read-more-link">Read More</a>
+            </div>
+
+            <div class="sidebar-ad">
+                <small>Ad &middot; &middot;</small>
+                <p>Master the 5 priciples of web design</p>
+                <div>
+                    <img src="./src/img/profile.jpg" alt="">
+                    <img src="./src/img/mi-logo.png" alt="">
+                </div>
+                <b>Brand and Demand in Xiaomi</b>
+                <a href="#" class="ad-link">Learn More</a>
+            </div>
+
+            <div class="sidebar-useful-links">
+                <a href="#">About</a>
+                <a href="#">Accessiblity</a>
+                <a href="#">Help Center</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Advertising</a>
+                <a href="#">Get the App</a>
+                <a href="#">More</a>
+
+                <div class="copyright-msg">
+                    <img src="./src/img/logo.png" alt="imagem logo">
+                    <p>Raphael Laurentino &#169; 2023. All right reserverd.</p>
+                </div>
             </div>
         </div>
     </div>
